# Pigo

./: .gitignore  AUTO_PLAY_FIX_SUMMARY.md  README.md  README_EN.md  REFACTOR_NOTES.md  STREAM_ENABLE_CONFIG.md  app.py  app.spec  build_exe.bat  index.html  main.py  play_queue.json  playback_history.json  playlists.json  pyproject.toml  requirements.txt  settings.ini  test_auto_lang.js  test_cable.py  test_i18n.js
.github/: copilot-instructions-new.md  copilot-instructions.md
models/: logger.py  logging_config.py  player.py  playlist.py  rank.py  settings.py  song.py  stream.py  webrtc.py
static/: main.js  style.css  sw.js  youtube.js
static/css/: base.css  responsive.css  settings.css  theme-dark.css  theme-light.css
static/images/: ICON_GENERATION_GUIDE.md
static/js/: api.js  debug.js  i18n.js  local.js  main.js  navManager.js  player.js  playlist.js  playlists-management.js  ranking.js  search.js  settingsManager.js  stream.js  ui.js  webrtc.js
templates/: index.html  pwa-test.html  test_aac_stream.html
test/: test_ffmpeg_support.py
